# seminar-assignment-with-bipartite-matching

./: .gitignore  CMakeLists.txt  README.md
.githooks/: commit-msg
core/: CMakeLists.txt  main.cpp
core/advisor/: ReliefAdvisor.h
core/analysis/: DemandCoverAnalysis.cpp  DemandCoverAnalysis.h  MatchingFlexibility.cpp  MatchingFlexibility.h  ReliefAdvisor.cpp  ReliefAdvisor.h
core/cover/: CriticalityAnalyzer.cpp  CriticalityAnalyzer.h  DemandCoverAnalysis.cpp  DemandCoverAnalysis.h  KonigCover.cpp  KonigCover.h
core/examples/: AllocationExamples.cpp  AllocationExamples.h
core/graph/: AllocationGraph.cpp  AllocationGraph.h  Node.h  NodeType.h  Preference.h
core/matching/: HopcroftKarp.cpp  HopcroftKarp.h  MatchingResult.h  SimpleMatching.cpp  SimpleMatching.h
core/rounds/: ExamRound.h  RoundHistory.cpp  RoundHistory.h
gui/: CMakeLists.txt
gui/include/: App.h  AppState.h  AppTheme.h  AppTooltips.h  GraphRenderer.h
gui/src/: App.cpp  AppPanels.cpp  AppState.cpp  GraphRenderer.cpp
